Adicionei um paragrafo

--- a/Site-exemplo/Index.html
+++ b/Site-exemplo/Index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Olá, Mundo!</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi ullam eum eligendi incidunt dolorum nulla repellendus maxime numquam harum? Vero sapiente culpa doloremque atque aliquid nostrum cum, possimus earum assumenda.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo fugit possimus eos excepturi debitis consequatur eius deleniti iste eum minus, cupiditate, necessitatibus iusto! Nulla nihil ab illo cum. Amet, harum?</p>
 </body>
 </html>
