conteúdo da branch
adição no código principal (main)

--- a/Site-exemplo/Index.html
+++ b/Site-exemplo/Index.html
@@ -9,5 +9,9 @@
     <h1>Olá, Mundo!</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi ullam eum eligendi incidunt dolorum nulla repellendus maxime numquam harum? Vero sapiente culpa doloremque atque aliquid nostrum cum, possimus earum assumenda.</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo fugit possimus eos excepturi debitis consequatur eius deleniti iste eum minus, cupiditate, necessitatibus iusto! Nulla nihil ab illo cum. Amet, harum?</p>
+    <h1>subtítulo</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus iure nobis eum in beatae. Distinctio officia est quidem id exercitationem debitis corrupti nemo enim fuga, rem laudantium quibusdam esse maxime.</p>
+    <h2>subtítulo 2</h2>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt et dolorum quibusdam magnam, mollitia enim inventore minima excepturi libero accusantium soluta fuga iste aliquam ducimus error quis officia unde at.</p>
 </body>
 </html>
